--- a/app/src/main/res/layout/activity_monitor_actualizar.xml
+++ b/app/src/main/res/layout/activity_monitor_actualizar.xml
@@ -77,7 +77,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_title_monitor" />
 
     <EditText
-        android:id="@+id/et_modelo"
+        android:id="@+id/et_modelo_compu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
