--- a/app/src/main/res/menu/menu_nuevo.xml
+++ b/app/src/main/res/menu/menu_nuevo.xml
@@ -5,5 +5,6 @@
     <item
         android:icon="@drawable/ic_check"
         android:title="Item"
+        android:id="@+id/btnBarAdd"
         app:showAsAction="ifRoom" />
 </menu>
