--- a/app/src/main/res/layout/activity_monitor_list.xml
+++ b/app/src/main/res/layout/activity_monitor_list.xml
@@ -5,5 +5,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Monitor.MonitorListActivity">
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addMonitorFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:contentDescription="Add"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_plus"
+        android:onClick="irNuevo"/>
 
+    <ListView
+        android:id="@+id/monitorListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_monitor"/>
+    <TextView
+        android:id="@+id/monitorEmpty"
+        android:text="No hay monitores ingresados"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
