Reduccion de xml

--- a/app/src/main/res/layout/activity_computadora_lista.xml
+++ b/app/src/main/res/layout/activity_computadora_lista.xml
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_computadora"/>
+        tools:listitem="@layout/item_equipos"/>
     <TextView
         android:id="@+id/computadoraEmpty"
         android:text="No hay computadoras ingresadas"
