--- a/app/src/main/res/layout/activity_monitor_list.xml
+++ b/app/src/main/res/layout/activity_monitor_list.xml
@@ -27,7 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_monitor"/>
+        tools:listitem="@layout/item_equipos"/>
     <TextView
         android:id="@+id/monitorEmpty"
         android:text="No hay monitores ingresados"
