--- a/app/src/main/res/layout/activity_monitor_nuevo.xml
+++ b/app/src/main/res/layout/activity_monitor_nuevo.xml
@@ -21,10 +21,11 @@
         android:id="@+id/spinner_marca_nmonitor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
+        android:entries="@array/marcas"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.19"
+        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_activo_nmonitor" />
 
@@ -33,9 +34,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:entries="@array/pulgadasMonitor"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.19"
+        app:layout_constraintHorizontal_bias="0.216"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_marca_nmonitor" />
 
@@ -77,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_title_nmonitor" />
 
     <EditText
-        android:id="@+id/et_modelo_nmonitor"
+        android:id="@+id/et_modelo_nteclado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
