--- a/app/src/main/res/menu/menu_actualizar.xml
+++ b/app/src/main/res/menu/menu_actualizar.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/btnActualizar"
         android:icon="@drawable/ic_check"
         android:title="Item"
         app:showAsAction="ifRoom" />
