--- a/app/src/main/res/layout/activity_reporte.xml
+++ b/app/src/main/res/layout/activity_reporte.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".reporteActivity">
 
+    <TextView
+        android:id="@+id/tvReporte"
+        android:layout_width="163dp"
+        android:layout_height="266dp"
+        android:layout_marginStart="134dp"
+        android:layout_marginTop="161dp"
+        android:text="Aùn no se encuentran dispositivos"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
