--- a/app/src/main/res/layout/activity_teclado_nuevo.xml
+++ b/app/src/main/res/layout/activity_teclado_nuevo.xml
@@ -79,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_title_nteclado" />
 
     <EditText
-        android:id="@+id/et_modelo_nteclado"
+        android:id="@+id/et_modelo_nmonitor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
