--- a/app/src/main/res/layout/activity_teclado_nuevo.xml
+++ b/app/src/main/res/layout/activity_teclado_nuevo.xml
@@ -58,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="88dp"
         android:ems="10"
+        android:hint="Año"
         android:inputType="number"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,6 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:hint="Activo"
         android:inputType="number"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,6 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:hint="Modelo"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
