--- a/app/src/main/res/menu/menu_actualizar.xml
+++ b/app/src/main/res/menu/menu_actualizar.xml
@@ -8,6 +8,7 @@
         android:title="Item"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/btnDelete"
         android:icon="@drawable/ic_delete"
         android:title="Item"
         app:showAsAction="ifRoom" />
