--- a/app/src/main/res/layout/activity_monitor_actualizar.xml
+++ b/app/src/main/res/layout/activity_monitor_actualizar.xml
@@ -6,87 +6,69 @@
     android:layout_height="match_parent"
     tools:context=".Monitor.MonitorActualizarActivity">
 
-    <TextView
-        android:id="@+id/tv_title_monitor"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
-        android:text="Monitor"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.189"
+        app:layout_constraintHorizontal_bias="0.16"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Spinner
-        android:id="@+id/spinner_marca_monitor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.19"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_activo_monitor" />
-
-    <Spinner
-        android:id="@+id/spinner_pulgadas_monitor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.19"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_marca_monitor" />
-
-    <Spinner
-        android:id="@+id/spinner_activo_monitor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.192"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_monitor_act" />
-
-    <EditText
-        android:id="@+id/et_anio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:ems="10"
-        android:inputType="number"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.348"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_marca_monitor" />
-
-    <EditText
-        android:id="@+id/plaintextModeloact"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.343"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_anio" />
-
-    <TextView
-        android:id="@+id/tv_monitor_act"
-        android:layout_width="165dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="176dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title_monitor" />
+        <TextView
+            android:id="@+id/tv_title_monitor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="72dp"
+            android:text="Monitor"
+            android:textSize="24sp" />
+        <TextView
+            android:id="@+id/tv_monitor_act"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="176dp"
+            android:textSize="16sp"
+            android:text="Activo" />
+        <Spinner
+            android:id="@+id/spinner_activo_monitor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:minHeight="48dp" />
+        <Spinner
+            android:id="@+id/spinner_marca_monitor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/marcas"
+            android:layout_marginTop="16dp"
+            android:minHeight="48dp" />
+        <Spinner
+            android:id="@+id/spinner_pulgadas_monitor"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_marginTop="20dp"
+            android:entries="@array/pulgadasMonitor"
+            android:minHeight="48dp" />
+        <EditText
+            android:id="@+id/et_anio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:hint="Año"
+            android:ems="10"
+            android:inputType="number"
+            android:minHeight="48dp" />
+        <EditText
+            android:id="@+id/plaintextModeloact"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="Modelo"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:minHeight="48dp" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
